--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -1,1 +1,1 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<p>Copyright &copy; {{ now.Year }} <a href="mailto:{{ .Site.Params.author.email }}" target="_blank">{{ .Site.Params.author.name }}</a>. All rights reserved.</p>
