--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -333,13 +333,17 @@ main mark {
   align-items: center;
   font-weight: 600;
   font-size: 14px;
-  margin-bottom: 0.5rem;
+  margin: 0 0 0.5rem;
   text-transform: capitalize;
 }
 
 .markdown-alert-title svg {
   margin-right: 8px;
   fill: currentColor;
+}
+
+.markdown-alert-content > :first-child {
+  margin-top: 0;
 }
 
 .markdown-alert-content p:last-child {
